# The-Adventure-in-Caves

./: .clang-format  .clangd  Block.cpp  CMakeLists.txt  Coin.cpp  Collectible.hpp  Collider.cpp  Enemy.cpp  Game.cpp  Game.hpp  HUD.cpp  Heart.hpp  Makefile  Player.cpp  Player.hpp  Portal.cpp  README.md  ResourceManager.cpp  ResourceManager.hpp  World.hpp
.github/workflows/: release.yml
assets/: CMakeLists.txt
assets/levels/: goodjob.txt  level1.txt  level5.txt
levels/: level2.txt  level3.txt  level4.txt
src/: Block.cpp  Block.hpp  CMakeLists.txt  Character.hpp  Coin.cpp  Coin.hpp  Collectible.hpp  Collider.cpp  Collider.hpp  Constants.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  HUD.cpp  HUD.hpp  HealthBar.cpp  HealthBar.hpp  Heart.cpp  Heart.hpp  ICharacter.hpp  ICollectible.hpp  Player.cpp  Player.hpp  Portal.cpp  Portal.hpp  ResourceManager.cpp  ResourceManager.hpp  Settings.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  main.cpp
